Fix logo stretch

--- a/index.css
+++ b/index.css
@@ -25,17 +25,19 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1.4rem;
+  color: #1e1e1e;
 }
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 .logo {
   display: flex;
   width: 80%;
   margin: 2rem auto;
-  height: auto;
+  object-fit: contain;
 }
 
 #title {
@@ -56,7 +58,7 @@ img {
 .pokemon {
   text-align: center;
   background-color: #eee;
-  border: 2px solid black;
+  border: 2px solid #333;
   border-radius: 0.5rem;
   padding: 0.5rem;
   margin: 0.5rem;
